# options_calc

./: .gitignore  README.md  app.py  prompt.md  pyproject.toml
options_calc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
